fix(css): hide product title if it is too long

--- a/javascript-practice/src/styles/components/product-item.css
+++ b/javascript-practice/src/styles/components/product-item.css
@@ -37,6 +37,7 @@
   margin-bottom: 9px;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .product-name {
